# FbxSkeleton

./: CMakeLists.txt  README.md  fbxDemo2-sho3la.kdev4  joint.txt  joint_data.txt  진행사항.txt
.kdev4/: fbxDemo2-sho3la.kdev4
include/: FBXLoader.h  FBXSkeleton.h  simpletracker.h
src/: FBXLoader.cpp  FBXSkeleton.cpp  main.cpp  simpletracker.cpp  test.cpp  문서작성
